Updated projects and informations

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/profile2-modified.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/assets/rounded_profile.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amjad Imdad</title>
   </head>
